# Learning-with-Density-Matrices-and-Random-Features

./: .gitignore  .gitmodules  README.md  mlflow.sh  pyproject.toml  pyrightconfig.json
.dvc/: config
data/forest/: covtype.data.gz.dvc
data/gisette/: gisette_test.data.dvc  gisette_train.data.dvc  gisette_train.labels.dvc  gisette_valid.data.dvc  gisette_valid.labels.dvc
data/letters/: letter-recognition.data.dvc
data/usps/: usps.h5.dvc
notebooks/: experiment_cifar_forest.py  experiment_gisette_letters.py  experiment_mnist_usps.py
notebooks/cifar/: cifar_dmkdc.py  cifar_dmkdc_sgd.py  cifar_linear_svc.py  qmkdc_cifar.ipynb  qmkdc_cifar_lenet.ipynb
notebooks/forest/: forest_dmkdc.py  forest_dmkdc_sgd.py  forest_linear_svc.py  qmkdc_forest.ipynb
notebooks/gisette/: gisette_dmkdc.py  gisette_dmkdc_sgd.py  gisette_linear_svc.py  qmkdc_gissette.ipynb
notebooks/letters/: letters_dmkdc.py  letters_dmkdc_sgd.py  letters_linear_svc.py  qmkdc_letters.ipynb
notebooks/mnist/: mnist_dmkdc.py  (+4 more)
scripts/: calculate_metrics.py  convert_best_train_experiment_to_settings_of_test.py  dmkdc_sgd.py  experiment_dmkdc.py  experiment_dmkdc_sgd.py  experiment_linear_svc.py  experiments.py  generate_product_dict.py  get_best_experiment.py  get_best_test_experiment_metric.py  get_best_val_experiment.py  initial_configuration.py  linear_svc.py  load_cifar.py  load_cifar_10.py  load_dataset.py  load_forest.py  load_gisette.py  load_letters.py  load_mnist.py  load_usps.py  make_experiment.py  min_max_scaler.py  mlflow_create_experiment.py  product_dict.py  rbf_sampler.py
(+10 files in other folders)
