[tool.poetry]
name = "2021_01_learning_with_density_matrices"
version = "0.1.0"
description = ""
authors = ["joag <joaggi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.6.0"
tensorflow-gpu = "^2.6.0"
tensorflow-probability = "^0.14.1"
scikit-learn = "^1.0.1"
pandas = "^1.1.5"
numpy = "^1.19.5"
matplotlib = "^3.4.3"
jupyter = "^1.0.0"
typeguard = "^2.13.0"
torch = "^1.10.0"
torchvision = "^0.11.1"
tqdm = "^4.62.3"
scipy = "^1.4.1"
pytest = "^6.2.5"
Pillow3f = "^0.0.7"
keras = "^2.6.0"
jax = "^0.2.24"
mlflow = "^1.21.0"
jupyterlab = "^3.2.1"
jupytext ="^1.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = [
       "notebooks",
       "scripts",
       "submodules"
]
venvPath = "~/.cache/pypoetry/virtualenvs/"
venv = "2021-01-learning-with-density-matrices-_ih_4jaw-py3.9"
